gccida/g2/compute_transp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4220:4: error: expected ';' after expression
rtx v18; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4220:5: error: use of undeclared identifier 'v18'
rtx v18; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4231:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v29; // rdx 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4231:12: error: use of undeclared identifier 'v29'
reg_set_0 *v29; // rdx 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4233:4: error: expected ';' after expression
rtx insn; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4233:5: error: use of undeclared identifier 'insn'
rtx insn; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4235:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 *v33; // rdx 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4235:12: error: use of undeclared identifier 'v33'
reg_set_0 *v33; // rdx 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4237:4: error: expected ';' after expression
rtx v35; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4237:5: error: use of undeclared identifier 'v35'
rtx v35; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4275:1: error: use of undeclared identifier 'v29'
v29 = reg_set_table[rtuint]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4276:6: error: use of undeclared identifier 'v29'
if ( v29 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4281:1: error: use of undeclared identifier 'insn'
insn = v29->insn; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4281:8: error: use of undeclared identifier 'v29'
insn = v29->insn; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4282:1: error: use of undeclared identifier 'v29'
v29 = v29->next; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4282:7: error: use of undeclared identifier 'v29'
v29 = v29->next; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4283:35: error: use of undeclared identifier 'insn'
v32 = bmap[*( int *)( v30->data.l[insn->fld[0].rtint] + 88)]; 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4286:9: error: use of undeclared identifier 'v29'
while ( v29 ); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/gcse.c:4306:1: error: use of undeclared identifier 'v33'
v33 = reg_set_table[rtuint]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/compute_transp/src/obj/gcse.o] Error 1
